[gd_scene load_steps=8 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://CyberSloth.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://set_t.png" type="Texture" id=3]
[ext_resource path="res://get_t.png" type="Texture" id=4]
[ext_resource path="res://underline.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
extra_spacing_top = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
extra_spacing_top = 33
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 400.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 451.0
margin_bottom = 398.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "C:/Users/lapsloth/Documents/BBtracker"
current_path = "C:/Users/lapsloth/Documents/BBtracker/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 61.0
margin_top = 7.0
margin_right = 121.0
margin_bottom = 900.0
custom_fonts/font = SubResource( 1 )
text = "N
O
D
A
T
A
F
O
U
N
D
4
0
4
:("
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 120.0
margin_right = 180.0
margin_bottom = 893.0
custom_fonts/font = SubResource( 2 )
text = "/70
b
c
d
e
f
g
h
i
j
k
l
m
n
o"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 30, 476 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 173, 476 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="UnderlineG" parent="." instance=ExtResource( 5 )]
margin_left = 57.4524
margin_top = 50.0
margin_right = 148.452
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
